Implement fuzzy search articles feature and moved pages to _pages directory

--- a/style.scss
+++ b/style.scss
@@ -93,6 +93,22 @@ p {
     line-height: 0.75em;
 }*/
 
+#search-container {
+  text-align: center;
+}
+
+#search-input {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 18px;
+  background-color: #fff3ff;
+}
+
 .share-box {
   font-weight: bold;
   color: #222;
