--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/search">Search</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
