--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,7 @@
 
 html {
   font-size: 100%;
+  height: 100%;
 }
 
 body {
@@ -26,6 +27,7 @@ body {
   line-height: 1.7;
   font-weight: bold;
   font-size: 15pt;
+  height: 100%;
 }
 
 .container {
@@ -334,10 +336,20 @@ nav {
   }
 }
 
+.wrapper-container {
+  min-height: 100%;
+  position: relative;
+}
+
+.wrapper-main {
+  padding-bottom: 134px;
+}
+
 .wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 89px;
   background-color: $lightGray;
 }
 
