Fix theme color and top bar color.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
-    <meta name="theme-color" content="#673AAC">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/png" sizes="32x32" href="/reverie/images/favicon-32x32.png">
     <script type="text/javascript">
       var host = "www.amitmerchant.com";
       if ((host == window.location.host) && (window.location.protocol != "https:"))
