--- a/style.scss
+++ b/style.scss
@@ -419,7 +419,7 @@ body:after {
 }
 
 #bar {
-    background: url(images/galaxy.jpg);
+    background: #000;
     height: 7px;
     background-size: cover;
     background-position: left 60%;
