Stop using the Futura font replacing them with the system fonts.

--- a/style.scss
+++ b/style.scss
@@ -22,11 +22,11 @@ html {
 
 body {
   background: #fff;
-  font-family: 'FuturaPTLight';
-  color: #555;
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #404040;
   line-height: 1.7;
-  font-weight: bold;
-  font-size: 15pt;
+  font-weight: 400;
+  font-size: 18px;
   height: 100%;
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'FuturaPTLight';
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: $darkerGray;
   font-weight: bold;
 
@@ -81,7 +81,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: #222;
 }
 
 p {
@@ -408,16 +408,6 @@ body:after {
     content: '';
 }
 
-@font-face {
-    font-family: EBGaramond;
-    src: url(fonts/EBGaramond-Regular.ttf);
-}
-
-@font-face {
-    font-family: FuturaPTLight;
-    src: url(fonts/FuturaPTLight.otf);
-}
-
 #bar {
     background: #000;
     height: 7px;
@@ -431,7 +421,7 @@ body:after {
 }
 
 .post h1{
-  font-family: 'FuturaPTLight';
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   font-weight: bold;
   font-kerning: auto;
@@ -440,7 +430,7 @@ body:after {
 }
 
 .page h1{
-  font-family: 'FuturaPTLight';
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   font-weight: bold;
   font-kerning: auto;
