Fixed site title for mobile.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -292,6 +292,11 @@ p > img {
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
+  text-align: left;
+
+  @include mobile {
+    text-align: center;
+  }
 }
 
 .site-description {
