--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
         <div class="container">
           <footer class="footer">
             {% include svg-icons.html %}
+            <a style="float: right;" href="{{ site.baseurl }}/imprint">Imprint</a>
           </footer>
         </div>
       </div>
