--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,8 @@ layout: default
 
   <div>
     <p><span class="share-box">Share:</span>
-      <a href="http://twitter.com/share?text={{ page.title }}&url={{site.url}}{{page.url}}" target="_blank">Twitter</a>
+      <a href="http://twitter.com/share?text={{ page.title }}&url={{site.url}}{{page.url}}" target="_blank">Twitter</a> |
+      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{site.url}}{{page.url}}" target="_blank">LinkedIn</a>
     </p>
   </div>
 
